hw: fix layout issues

--- a/style.css
+++ b/style.css
@@ -9,14 +9,14 @@
     margin: 0px auto;
     max-width: 1180px; /* ⚠️ ОБРАТИ ВНИМАНИЕ - максимальная ширина увеличилась на размер отступов, чтобы ширина контента оставалась корректной */
     /* 📍 Свойство для внутрених отступов */
-    padding: 0 16px;
+    padding: 0 20px;
 }
 
 body {
     font-family: "Inter", sans-serif; 
     color: #303030;
     /* 📍 Минимальная ширина */ 
-    min-width: 320px;
+    min-width: 375px;
 }
 
 header {
@@ -145,6 +145,7 @@ select:hover,
 form {
     margin-bottom: 40px;
     /* 📍 Свойства для расположения элементов (инпута и кнопки) и отступа между ними */
+    gap: 10px;
 }
 
 .text-field {
@@ -213,7 +214,7 @@ footer {
     .main-section {
         /* 📍 Свойства для установки минимальной высоты секции по размеру контента и нижнего внутреннего отступа */
         min-height: auto; /* высота по контенту */
-        padding-bottom: 60px; 
+        padding-bottom: 100px; 
     }
 
     .main-section .wrapper {
@@ -247,7 +248,7 @@ footer {
     .info-wrapper {
         /* 📍 Свойства для расположения 2-x списков и отступа между ними */
         flex-direction: column; /* списки друг под другом */
-        gap: 40px; /* отступ между списками */
+        gap: 60px; /* отступ между списками */
     }
 }
 
@@ -255,7 +256,7 @@ footer {
 @media screen and (max-width: 576px) {
     .main-section {
         /* 📍 Внутренние отступы сверху и снизу */
-        padding: 40px 0;
+        padding: 30px 0 60px;
     }
 
     .main-section .wrapper {
@@ -265,14 +266,14 @@ footer {
 
     .main-title {
         /* 📍 Размер шрифта */
-        font-size: 32px;
+        font-size: 36px;
     }
 
     .about-section .wrapper,
     .info-wrapper {
         /* 📍 Отступ между изображением и блоком с текстом */
         display: flex; /* инпут и кнопка в ряд */
-        gap: 8px; /* отступ между инпутом и кнопкой */
+        gap: 50px; /* отступ между инпутом и кнопкой */
         margin-bottom: 40px;
     }
 }
